--- a/css/style.css
+++ b/css/style.css
@@ -150,6 +150,8 @@ a {
 .content .content__title {
     display: block;
     color: #fff;
+    transform: translateX(100%);
+    opacity: 0;
     font-size: 28px;
 
 }
@@ -157,6 +159,8 @@ a {
 .content__description {
     display: block;
     color: #fff;
+    opacity: 0;
+    transform: translateX(110%);
     font-size: 18px;
     margin-top: 13px;
     margin-bottom: 13px;
@@ -168,6 +172,8 @@ a {
     display: block;
     border: none;
     outline: none;
+    opacity: 0;
+    transform: translateY(100%);
     border-radius: 50px;
     padding: 13px 40px;
     font-size: 17px;
